Fix black text in new tab page dark mode with custom theme

--- a/Profile Folder/chrome/pages/newTabHome/partials/chrome-11/_most-visited.scss
+++ b/Profile Folder/chrome/pages/newTabHome/partials/chrome-11/_most-visited.scss
@@ -11,5 +11,6 @@
 
 	@media (prefers-color-scheme: dark) {
 		--thumbnail-border-color-normal: rgb(88, 88, 88);
+		--thumbnail-container-color: white;
 	}
 }
